--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,6 +12,29 @@ img {
   font-weight: 900;
 }
 
+body {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-list {
+  display: flex;
+  justify-content: stretch;
+}
+
+.info-list > * {
+  flex: 1 1 0;
+}
+
+.info-container {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
