--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,26 +4,118 @@ body {
   min-height: 100vh;
 }
 
+/* css resets */
+
+* {
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+/* body Layout */
+
+body {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.header,
+.footer {
+  flex: 0 0 72px;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+/* header */
+
 .header {
-  height: 72px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  padding: 16px;
+
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
 }
 
+/* footer */
+
 .footer {
-  height: 72px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background: #eee;
   color: darkmagenta;
 }
 
+/* main layout */
+
+main {
+  display: flex;
+}
+
 .sidebar {
-  width: 300px;
+  flex: 0 0 300px;
+
   background: royalblue;
-  box-sizing: border-box;
+}
+
+.cards {
+  flex: 1 1 auto;
+}
+
+
+/* sidebar */
+
+.sidebar ul {
+  display: flex;
+  flex-flow: column nowrap;
+
+  padding: 16px;
+  gap: 16px;
+}
+
+.sidebar a {
+  color: white;
+  font-size: 24px;
+}
+
+/* cards */
+.cards {
+  display: flex;
+  flex-flow: row wrap;
+
+  justify-content: start;
+  align-content: stretch;
+  align-items: stretch;
+
+  padding: 48px;
+  gap: 48px;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+
+  padding: 16px;
+  width: 320px;
 }
