fix(foundations/flex/07): set padding-block: 0
We have the following css
`.header { display: flex, align-items: center }`
We want `padding-block` to be zero because
we want the height to be 72px even if the heading's font size
becomes greater than `72px - (2 * padding)`

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -47,7 +47,7 @@ main {
   justify-content: start;
   align-items: center;
 
-  padding: 16px;
+  padding-inline: 16px;
 
   font-size: 32px;
   font-weight: 900;
