--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -3,8 +3,22 @@
   padding: 0;
 }
 
+li {
+  list-style: none;
+}
+
 .container {
   text-align: center;
+
+  display: grid;
+  grid:
+    "header header " auto
+    "sidebar nav" 1fr
+    "sidebar article" auto
+    "footer footer" 1fr
+    / 1fr 4fr;
+
+  gap: 4px;
 }
 
 .container div {
@@ -16,7 +30,35 @@
 }
 
 .header {
+  grid-area: header;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
   background-color: #393f4d;
+}
+
+.logo {
+  display: grid;
+  justify-items: start;
+  align-items: center;
+}
+
+.menu {
+  display: grid;
+  justify-items: stretch;
+  align-items: center;
+}
+
+.menu ul,
+.menu li {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+.menu ul {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
@@ -25,7 +67,13 @@
 }
 
 .sidebar {
-  background-color: #C50208;
+  grid-area: sidebar;
+
+  display: grid;
+  grid-template: repeat(4, 1fr) / 1fr;
+  gap: 50px;
+
+  background-color: #c50208;
 }
 
 .sidebar .photo {
@@ -36,7 +84,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,7 +92,18 @@
 }
 
 .nav {
-  background-color: #C50208;
+  grid-area: nav;
+
+  display: grid;
+  justify-content: stretch;
+  align-content: stretch;
+
+  background-color: #c50208;
+}
+
+.nav ul {
+  display: grid;
+  grid: 1fr / 1fr 1fr 1fr;
 }
 
 .nav ul li {
@@ -54,6 +112,12 @@
 }
 
 .article {
+  grid-area: article;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+
   background-color: #bccbde;
 }
 
@@ -65,7 +129,7 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
@@ -82,6 +146,11 @@
 }
 
 .footer {
+  grid-area: footer;
+
+  display: grid;
+  align-content: center;
+
   background-color: #393f4d;
 }
 
