--- a/advanced-html-css/animation/01-button-hover/style.css
+++ b/advanced-html-css/animation/01-button-hover/style.css
@@ -16,9 +16,9 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
-  transition: scale 0.5s;
+  transition: transform 0.5s;
 }
 
 button:hover {
-  scale: 1.5;
+  transform: scale(1.5);
 }
