--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -35,7 +35,9 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -150%);
+  transition: 1s;
+  transition-property: transform opacity;
   pointer-events: none;
   opacity: 0%;
   text-align: center;
@@ -54,6 +56,7 @@ button {
 }
 
 .popup-modal.show {
+  transform: translate(-50%, -50%);
   opacity: 100%;
   pointer-events: all;
 }
